--- a/.github/workflows/deplay.yml
+++ b/.github/workflows/deplay.yml
@@ -9,9 +9,14 @@ jobs:
     name: 🎉 Deploy
     runs-on: ubuntu-latest
     steps:
+      - name: Install dependencies
+        run: |
+          npm install
+      - name: Build application
+        run: |
+          npm run build
       - name: 🚚 Get latest code
         uses: actions/checkout@v3
-
       - name: 📂 Sync files
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
