--- a/.github/workflows/deplay.yml
+++ b/.github/workflows/deplay.yml
@@ -9,12 +9,12 @@ jobs:
     name: 🎉 Deploy
     runs-on: ubuntu-latest
     steps:
-      - name: Install dependencies
-        run: |
-          npm install
-      - name: Build application
-        run: |
-          npm run build
+      - uses: actions/checkout@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+        run: npm run build
       - name: 🚚 Get latest code
         uses: actions/checkout@v3
       - name: 📂 Sync files
