--- a/.github/workflows/deplay.yml
+++ b/.github/workflows/deplay.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
+      - name: Build application
         run: npm run build
       - name: 🚚 Get latest code
         uses: actions/checkout@v3
