--- a/.github/workflows/deplay.yml
+++ b/.github/workflows/deplay.yml
@@ -5,17 +5,18 @@ on:
 
 name: 🚀 Deploy website on push
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout your repository using git
+        uses: actions/checkout@v3
+      - name: Install, build, and upload your site output
+        uses: withastro/action@v0
   web-deploy:
+    needs: build
     name: 🎉 Deploy
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18.x
-      - name: Build application
-        run: npm run build
       - name: 🚚 Get latest code
         uses: actions/checkout@v3
       - name: 📂 Sync files
