--- a/.github/workflows/deplay.yml
+++ b/.github/workflows/deplay.yml
@@ -12,6 +12,9 @@ jobs:
         uses: actions/checkout@v3
       - name: Install, build, and upload your site output
         uses: withastro/action@v0
+        with:
+         package-manager: npm
+
   web-deploy:
     needs: build
     name: 🎉 Deploy
