--- a/.github/workflows/deplay.yml
+++ b/.github/workflows/deplay.yml
@@ -22,6 +22,8 @@ jobs:
     steps:
       - name: 🚚 Get latest code
         uses: actions/checkout@v3
+      - name: test
+        run: ls -la
       - name: 📂 Sync files
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
