--- a/.github/workflows/deplay.yml
+++ b/.github/workflows/deplay.yml
@@ -24,6 +24,8 @@ jobs:
     steps:
       - name: 🚚 Get latest code
         uses: actions/checkout@v3
+      - name: DEBUG
+        run: ls
       - name: 📂 Sync files
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
